# SYMBIOTE-STRAIN

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  symb.conf
benchmarks/: bench_cpu.py  bench_gpu.py
docs/: GAME-DESIGN.md  GAME-OVERVIEW.md
scripts/: run_game.py  run_pygame.py
symbiote/: __init__.py  async_sched.py  cli.py  config.py  core.py  dna.py  energy.py  gpu_backend.py
symbiote/rl/: env.py  train.py
symbiote/viz/: matplotlib_viewer.py  pygame_viewer.py
symbiote_strain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
